<?xml version="1.0" encoding="utf-8"?>
<!--File Name : file_options_menu.xml
Module    : Home
Project   : CloudVault

Popup menu displayed when the user presses
the "More" button of a file.
القائمة التي تظهر عند الضغط على زر
(⋮) الخاص بكل ملف.-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_open"
        android:title="@string/open_title_menu"
        android:icon="@drawable/ic_open"/>

    <item
        android:id="@+id/action_download"
        android:title="@string/download_title_menu"
        android:icon="@drawable/ic_download"/>

    <item
        android:id="@+id/action_share"
        android:title="@string/delete_title_menu"/>

    <item
        android:id="@+id/action_rename"
        android:title="@string/open_title_menu"
        android:icon="@drawable/ic_rename"/>

    <item
        android:id="@+id/action_copy_link"
        android:title="@string/download_title_menu"
        android:icon="@drawable/ic_copy"/>

    <item
        android:id="@+id/action_delete"
        android:title="@string/delete_title_menu"
        android:icon="@drawable/ic_delete"/>
</menu>